--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
-
 /* You can add global styles to this file, and also import other style files */
 @import "assets/layout-theme.scss";
 @import "assets/grid-layout.scss";
 @import "assets/variables.scss";
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
 }
 
 [hidden] {
@@ -23,15 +23,15 @@ a {
   align-items: center;
   height: 100vh;
   background-color: $primarySchneiderBgColor;
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   font-size: 2.5em;
-  text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .mat-accent {
   background-color: $darkSchneiderBgColor;
-  color: #FFF !important;
+  color: #fff !important;
 }
 
 .mat-form-field-required-marker {
@@ -51,7 +51,6 @@ form .mat-form-field:last-of-type {
   display: block;
   margin-top: 15px;
 }
-
 
 a.link,
 button.link {
@@ -92,7 +91,7 @@ button.link:before {
   width: 100%;
   height: 1px;
   background-color: $primarySchneiderBgColor;
-  content: '';
+  content: "";
   -webkit-transition: all 0.2s;
   -webkit-backface-visibility: hidden;
   transition: all 0.2s;
@@ -144,7 +143,7 @@ button.link:hover:before {
 .well {
   padding: 15px;
   background: #f8f8f9;
-  box-shadow: 0 0 0 1px rgba(34,36,38,.22) inset, 0 0 0 0 transparent;
+  box-shadow: 0 0 0 1px rgba(34, 36, 38, 0.22) inset, 0 0 0 0 transparent;
   margin-bottom: 15px;
 }
 
@@ -155,7 +154,7 @@ button.link:hover:before {
 
 @keyframes dots {
   50% {
-    transform: translateY(-.4rem);
+    transform: translateY(-0.4rem);
   }
 
   100% {
@@ -168,7 +167,7 @@ button.link:hover:before {
 }
 
 .d-2 {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 
 .d-3 {
@@ -333,7 +332,11 @@ button {
   margin-top: 15px;
 }
 
-.mat-form-field-can-float .mat-input-server:focus + .mat-form-field-label-wrapper .mat-form-field-label, .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+.mat-form-field-can-float
+  .mat-input-server:focus
+  + .mat-form-field-label-wrapper
+  .mat-form-field-label,
+.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
   font-size: 1.2em;
 }
 
@@ -355,11 +358,11 @@ button.table-actions:disabled > .mat-icon.material-icons {
 }
 
 .mat-raised-button .mat-button-wrapper {
-  color: #FFF;
+  color: #fff;
 }
 
 .mat-raised-button {
-  transition: all .25s ease !important;
+  transition: all 0.25s ease !important;
 }
 
 .mat-raised-button:hover {
