mock users & chatrooms

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "assets/layout-theme.scss";
 @import "assets/grid-layout.scss";
 @import "assets/variables.scss";
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
