--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,15 +36,11 @@
     <mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
       <ng-container matColumnDef="server">
         <th mat-header-cell *matHeaderCellDef>Server</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.serverUrl }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>User ID</th>
+        <th mat-header-cell *matHeaderCellDef>Chatroom</th>
         <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="ownerName">
-        <th mat-header-cell *matHeaderCellDef>Username</th>
-        <td mat-cell *matCellDef="let element">{{ element.owner.username }}</td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
