--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,49 +1,49 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>Users</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="server">
-        <th mat-header-cell *matHeaderCellDef>Server</th>
-        <td mat-cell *matCellDef="let element">{{ element.server }}</td>
-      </ng-container>
-      <ng-container matColumnDef="accountId">
-        <th mat-header-cell *matHeaderCellDef>User ID</th>
-        <td mat-cell *matCellDef="let element">{{ element.account.id }}</td>
-      </ng-container>
-      <ng-container matColumnDef="accountUsername">
-        <th mat-header-cell *matHeaderCellDef>Username</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.account.username }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </mat-table>
-  </mat-card-content>
-</mat-card>
+<h3>Users</h3>
+<mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="server">
+    <mat-header-cell *matHeaderCellDef> Server Url </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{ element.server }} </mat-cell>
+  </ng-container>
 
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>Chatrooms</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
-      <ng-container matColumnDef="server">
-        <th mat-header-cell *matHeaderCellDef>Server</th>
-        <td mat-cell *matCellDef="let element">{{ element.serverUrl }}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Chatroom</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
-    </mat-table>
-  </mat-card-content>
-</mat-card>
+  <!-- Name Column -->
+  <ng-container matColumnDef="accountId">
+    <mat-header-cell *matHeaderCellDef> User Id </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{ element.account.id }} </mat-cell>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="accountUsername">
+    <mat-header-cell *matHeaderCellDef> Username </mat-header-cell>
+    <mat-cell *matCellDef="let element">
+      {{ element.account.username }}
+    </mat-cell>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="status">
+    <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{ element.currentStatus }} </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+</mat-table>
+
+<h3>Chatrooms</h3>
+<mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
+  <!-- Position Column -->
+  <ng-container matColumnDef="server">
+    <mat-header-cell *matHeaderCellDef> Server Url </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{ element.serverUrl }} </mat-cell>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef> Chatroom </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{ element.name }} </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns1"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns1"></mat-row>
+</mat-table>
