--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,24 @@
+<div class="row">
+<div *ngFor="let server of serverList">
+  <mat-card *ngIf="getUsersCountOnServer(server) > 0" class="col m4" style="margin-left : 5px">
+   <mat-card-header>
+     <mat-card-title>
+      Server : {{server}}
+     </mat-card-title>
+   </mat-card-header>
+    <mat-card-content >
+     <p>{{ getUsersCountOnServer(server) }} active users</p>
+     <p>{{ getChatroomsCountOnServer(server)}} active chatrooms</p>
+    </mat-card-content>
+  </mat-card>
+</div>
+</div>
 <h3>Users</h3>
 <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <!-- Position Column -->
   <ng-container matColumnDef="server">
     <mat-header-cell *matHeaderCellDef> Server Url </mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{ element.server }} </mat-cell>
+    <mat-cell *matCellDef="let element"> {{ element.serverUrl }} </mat-cell>
   </ng-container>
 
   <!-- Name Column -->
